--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/blocks';
-import Logo from './assets/logo.png';
+import Logo from '../static/images/logo.png';
 
 <Meta title="Introduction" />
 
