--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -1,28 +1,14 @@
 import { Meta } from '@storybook/blocks';
-import Logo from '../static/images/logo.png';
 
 <Meta title="Introduction" />
 
 <style>
   {`
-    .logo {
-      border-radius: 10px;
-      display: block;
-      margin: 0 auto 50px;
-      width: 300px;
-      height: 300px;
-    }
     strong {
       font-weight: bold;
     }
   `}
 </style>
-
-<p align="center">
-  <img src="src/static/images/logo.png" alt="Verndale" class="logo" />
-</p>
-
-<br />
 
 # Verndale Frontend Toolkit
 
@@ -149,7 +135,7 @@ The module source code can be found under the following:
 
 - HTML - `src/html/modules`
 - SCSS - `src/scss/modules`
-- JS - `src/js/modules`
+- JS - `src/scripts/modules`
 
 ### Component source code
 
@@ -157,7 +143,7 @@ The component source code can be found under the following:
 
 - HTML - `src/html/components`
 - SCSS - `src/scss/components`
-- JS - `src/js/components`
+- JS - `src/scripts/components`
 
 ### Stories source code
 
