Restructure toolkit folders

--- a/src/stories/Colors.mdx
+++ b/src/stories/Colors.mdx
@@ -2,6 +2,8 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 
 <Meta title="Colors" />
 
+# Color Palette
+
 <ColorPalette>
   <ColorItem
     title="Graey Scale"
