--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -4,6 +4,14 @@ import { Meta } from '@storybook/blocks';
 
 <style>
   {`
+    h2 {
+      margin-block: 2rem !important;
+    }
+
+    h3 {
+      margin-block: 1.5rem !important;
+    }
+
     strong {
       font-weight: bold;
     }
