--- a/src/stories/Typography.mdx
+++ b/src/stories/Typography.mdx
@@ -4,6 +4,10 @@ import { Meta, Typeset } from '@storybook/blocks';
 
 <style>
   {`
+    h2 {
+      margin-block: 2rem !important;
+    }
+
     strong {
       font-weight: bold;
     }
