--- a/src/stories/Grid.mdx
+++ b/src/stories/Grid.mdx
@@ -5,7 +5,7 @@ import { Meta } from '@storybook/blocks';
 <style>
   {`
   .toolkit-example {
-    padding: 1.5rem;
+    padding: 1.5rem 3rem;
     border: 1px solid #D2D2D2;
     border-radius: 10px;
   }
@@ -19,6 +19,10 @@ import { Meta } from '@storybook/blocks';
 
   .text-center {
     text-align: center;
+  }
+
+  .row {
+    margin-inline: calc(var(--gutter-width) * -0.5);
   }
 
   h2 {
@@ -148,7 +152,7 @@ Add any number of unit-less classes for each breakpoint you need and every colum
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <div class="row">
     <div class="col">1 of 2</div>
     <div class="col">2 of 2</div>
@@ -183,7 +187,7 @@ columns will resize no matter the width of the center column.
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <div class="row">
     <div class="col">1 of 3</div>
     <div class="col-6">2 of 3 (wider)</div>
@@ -202,7 +206,7 @@ columns will resize no matter the width of the center column.
 Use <code>col-\{breakpoint\}-auto</code> classes to size columns based on the natural width of their content.
 
 <div class="toolkit-example">
-  <div class=" text-center">
+  <div class="text-center">
     <div class="row justify-content-md-center">
       <div class="col col-lg-2">1 of 3</div>
       <div class="col-md-auto">Variable width content</div>
@@ -217,7 +221,7 @@ Use <code>col-\{breakpoint\}-auto</code> classes to size columns based on the na
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <div class="row justify-content-md-center">
     <div class="col col-lg-2">1 of 3</div>
     <div class="col-md-auto">Variable width content</div>
@@ -233,7 +237,7 @@ Use <code>col-\{breakpoint\}-auto</code> classes to size columns based on the na
 
 ## Responsice classes
 
-Bootstrap’s grid includes six tiers of predefined classes for building complex responsive layouts. Customize the size
+The Toolkit's grid includes six tiers of predefined classes for building complex responsive layouts. Customize the size
 of your columns on extra small, small, medium, large, or extra large devices however you see fit.
 
 ### All breakpoints
@@ -242,7 +246,7 @@ For grids that are the same from the smallest of devices to the largest, use the
 Specify a numbered class when you need a particularly sized column; otherwise, feel free to stick to <code>.col</code>.
 
 <div class="toolkit-example">
-  <div class=" text-center">
+  <div class="text-center">
     <div class="row">
       <div class="col">col</div>
       <div class="col">col</div>
@@ -257,7 +261,7 @@ Specify a numbered class when you need a particularly sized column; otherwise, f
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <div class="row">
     <div class="col">col</div>
     <div class="col">col</div>
@@ -291,7 +295,7 @@ stacked and becomes horizontal at the small breakpoint (sm).
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <div class="row">
     <div class="col-sm-8">col-sm-8</div>
     <div class="col-sm-4">col-sm-4</div>
@@ -328,7 +332,7 @@ See the example below for a better idea of how it all works.
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <!-- Stack the columns on mobile by making one full-width and the other half-width -->
   <div class="row">
     <div class="col-md-8">.col-md-8</div>
@@ -370,7 +374,7 @@ Use these row columns classes to quickly create basic grid layouts or to control
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <div class="row row-cols-2">
     <div class="col">Column</div>
     <div class="col">Column</div>
@@ -392,7 +396,7 @@ Use these row columns classes to quickly create basic grid layouts or to control
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <div class="row row-cols-3">
     <div class="col">Column</div>
     <div class="col">Column</div>
@@ -414,7 +418,7 @@ Use these row columns classes to quickly create basic grid layouts or to control
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <div class="row row-cols-auto">
     <div class="col">Column</div>
     <div class="col">Column</div>
@@ -436,7 +440,7 @@ Use these row columns classes to quickly create basic grid layouts or to control
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <div class="row row-cols-4">
     <div class="col">Column</div>
     <div class="col">Column</div>
@@ -458,7 +462,7 @@ Use these row columns classes to quickly create basic grid layouts or to control
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <div class="row row-cols-4">
     <div class="col">Column</div>
     <div class="col">Column</div>
@@ -480,7 +484,7 @@ Use these row columns classes to quickly create basic grid layouts or to control
 </div>
 
 ```html
-<div class="text-center">
+<div class="container">
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
     <div class="col">Column</div>
     <div class="col">Column</div>
