Simplify config file

--- a/src/stories/Grid.mdx
+++ b/src/stories/Grid.mdx
@@ -254,14 +254,14 @@ Specify a numbered class when you need a particularly sized column; otherwise, f
 <div className="toolkit-example">
   <div className="text-center">
     <div className="row">
-      <div className="col">col</div>
-      <div className="col">col</div>
-      <div className="col">col</div>
-      <div className="col">col</div>
+      <div className="col">.col</div>
+      <div className="col">.col</div>
+      <div className="col">.col</div>
+      <div className="col">.col</div>
     </div>
     <div className="row">
-      <div className="col-8">col-8</div>
-      <div className="col-4">col-4</div>
+      <div className="col-8">.col-8</div>
+      <div className="col-4">.col-4</div>
     </div>
   </div>
 </div>
@@ -269,14 +269,14 @@ Specify a numbered class when you need a particularly sized column; otherwise, f
 ```html
 <div class="container">
   <div class="row">
-    <div class="col">col</div>
-    <div class="col">col</div>
-    <div class="col">col</div>
-    <div class="col">col</div>
+    <div class="col">.col</div>
+    <div class="col">.col</div>
+    <div class="col">.col</div>
+    <div class="col">.col</div>
   </div>
   <div class="row">
-    <div class="col-8">col-8</div>
-    <div class="col-4">col-4</div>
+    <div class="col-8">.col-8</div>
+    <div class="col-4">.col-4</div>
   </div>
 </div>
 ```
@@ -289,13 +289,13 @@ stacked and becomes horizontal at the small breakpoint (sm).
 <div className="toolkit-example">
   <div className="text-center">
     <div className="row">
-      <div className="col-sm-8">col-sm-8</div>
-      <div className="col-sm-4">col-sm-4</div>
+      <div className="col-sm-8">.col-sm-8</div>
+      <div className="col-sm-4">.col-sm-4</div>
     </div>
     <div className="row">
-      <div className="col-sm">col-sm</div>
-      <div className="col-sm">col-sm</div>
-      <div className="col-sm">col-sm</div>
+      <div className="col-sm">.col-sm</div>
+      <div className="col-sm">.col-sm</div>
+      <div className="col-sm">.col-sm</div>
     </div>
   </div>
 </div>
@@ -303,13 +303,13 @@ stacked and becomes horizontal at the small breakpoint (sm).
 ```html
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">col-sm-8</div>
-    <div class="col-sm-4">col-sm-4</div>
+    <div class="col-sm-8">.col-sm-8</div>
+    <div class="col-sm-4">.col-sm-4</div>
   </div>
   <div class="row">
-    <div class="col-sm">col-sm</div>
-    <div class="col-sm">col-sm</div>
-    <div class="col-sm">col-sm</div>
+    <div class="col-sm">.col-sm</div>
+    <div class="col-sm">.col-sm</div>
+    <div class="col-sm">.col-sm</div>
   </div>
 </div>
 ```
